[package]
name = "servers"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
opensrv-mysql = "0.2"
snafu = { version = "0.7", features = ["backtraces"] }
stream-cancel = { version = "0.8" }
tokio = { version = "1.21", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tokio-stream = { version="0.1", features=["net"] }
